# Opengl_Template

./: CMakeLists.txt  README.md  game.cpp  game.h  glad.c  glad.h  main.cpp  resourceManager.cpp  resourceManager.h  shader.h
